# flaxkv

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ZH.md  pyproject.toml  pytest.ini
.github/workflows/: gh-release.yml
benchmark/: db_class.py  dbclass.py  helpers.py  run.py  test_redis.py
benchmark/mq_dealer_router/: client.py  server.py
benchmark/mq_req_rep/: aclient.py  client.py  server.py
flaxkv/: __init__.py  __main__.py  _sqlite.py  base.py  core.py  decorators.py  helper.py  log.py  manager.py  pack.py
flaxkv/serve/: __init__.py  app.py  client.py  interface.py  manager.py  route.py
flaxkv/serve/mq/: client.py  client2.py  route.py  server.py  sub.py
flaxkv/serve/mq/pubsub/: client.py  pub.py  server.py  sub2.py
tests/: test_db.py  test_local_db.py  test_remote_db.py  test_serve.py
